# ToDo_CLI--Rust

./: Cargo.toml
src/: cli.rs  main.rs  storage.rs  todo.rs
src/commands/: add.rs  list.rs
